--- a/src/views/partials/article.ejs
+++ b/src/views/partials/article.ejs
@@ -4,12 +4,12 @@
 <div class="container">
     <div class="d_grid grid_t_c_3 max_w_800 m_auto getThis">
         <div class="m_auto">
-            <img src="/uploads/<%=art.Img%>" alt="..." class="img_Cat pos_stcky zoom transition">
+            <img id="image_article" src="/uploads/<%=art.Img%>" alt="..." class="img_Cat pos_stcky zoom transition">
         </div>
         <div>
             <span class="inactive" id="artID"><%= art.ID_article %></span>
-            <h1 class="font_w_n" id="artName"> <%= art.Name %> </h1>
-            <p class="color_g font_size_25" id="artPrice"> $ <%= art.Price %> </p>
+            <h1 class="font_w_n" id="artName"><%= art.Name %></h1>
+            <p class="color_g font_size_25" id="artPrice">$<%=art.Price%></p>
             <div class="d_flex flex_d_c">
                 <span>Vendedor: <a href="/store/user/<%= all_data.ID_user %>" class="text_d_n font_w_bold color_n underline"> <%= all_data.NameUser %> </a></span>
                 <!-- <label for=""> Cantidad </label> -->
