--- a/src/views/partials/login.ejs
+++ b/src/views/partials/login.ejs
@@ -4,7 +4,7 @@
         <form action="/register/login" method="post" class="">
             <div class="d_flex flex_d_c">
                 <h1 class="font_w_n">Login</h1>
-                <input type="email" class="searcher" name="Email" placeholder="Telefono">
+                <input type="email" class="searcher" name="Email" placeholder="Correo">
                 <input type="password" class="searcher" name="Password" placeholder="Contraseña">
                 <a href="" class="m_t_b_05 font_size_15">Olvide la contraseña</a>
             </div>
