--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -8,5 +8,6 @@
     <!-- Inport cssStyles -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <script defer src="https://kit.fontawesome.com/1ca4c8aec6.js" crossorigin="anonymous"></script>
 </head>
 <body id="body">
