--- a/src/views/partials/login.ejs
+++ b/src/views/partials/login.ejs
@@ -4,8 +4,14 @@
         <form action="/register/login" method="post" class="">
             <div class="d_flex flex_d_c">
                 <h1 class="font_w_n">Login</h1>
-                <input type="email" class="searcher" name="Email" placeholder="Correo">
-                <input type="password" class="searcher" name="Password" placeholder="Contraseña">
+                <div class="pos_rel">
+                    <input type="email" class="searcher push_icon" name="Email" placeholder="Correo">
+                    <i id="" class="fa-lg fa-solid fa-envelope" style="color: #ccc;"></i>
+                </div>
+                <div class="pos_rel">
+                    <input type="password" class="searcher push_icon" name="Password" placeholder="Contraseña">
+                    <i id="" class="fa-lg fa-solid fa-key" style="color: #ccc;"></i>
+                </div>
                 <a href="" class="m_t_b_05 font_size_15">Olvide la contraseña</a>
             </div>
                 <button type="submit" class="input_text m_t_1 bg_color_g color_w font_w_bold font_size_25 border_none cursor">Entrar</button>
